--- a/backend/app_backend/requirements.txt
+++ b/backend/app_backend/requirements.txt
@@ -1,13 +1,73 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+appnope==0.1.4
+asttokens==3.0.0
+bcrypt==4.2.1
+boto3==1.35.76
+botocore==1.35.76
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
+comm==0.2.2
+debugpy==1.8.9
+decorator==5.1.1
+dnspython==2.7.0
+email_validator==2.2.0
+executing==2.1.0
 fastapi==0.115.5
+google-ai-generativelanguage==0.6.10
+google-api-core==2.23.0
+google-api-python-client==2.154.0
+google-auth==2.36.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.3
+googleapis-common-protos==1.66.0
+grpcio==1.68.1
+grpcio-status==1.68.1
 h11==0.14.0
+httplib2==0.22.0
 idna==3.10
+ipykernel==6.29.5
+ipython==8.30.0
+jedi==0.19.2
+jmespath==1.0.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+packaging==24.2
+parso==0.8.4
+passlib==1.7.4
+pexpect==4.9.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
+proto-plus==1.25.0
+protobuf==5.29.1
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+Pygments==2.18.0
+pyparsing==3.2.0
+python-dateutil==2.9.0.post0
+pyzmq==26.2.0
+redis==5.2.0
+requests==2.32.3
+rsa==4.9
+s3transfer==0.10.4
+six==1.17.0
 sniffio==1.3.1
+stack-data==0.6.3
 starlette==0.41.3
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
 typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==2.2.3
 uvicorn==0.32.0
-google-generativeai==0.8.3
+wcwidth==0.2.13
